# FFmpeg

./: .gitignore  build.sh
ffplay-sp/: CMakeLists.txt  build.sh
